# rf-detr-mask

./: .bandit  .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  PRE_COMMIT_STATUS.md  README.md  checkpoint_metrics_demo.md  critique.md  example_custom_annotations.py  fix_formatting.sh  fix_mypy_errors.py  fixed_size_test.py  formatting_failure.md  github_issue_1_two_stage.md  github_issue_2_segmentation_implementation.md  github_issue_3_configuration_validation.md  github_issue_4_loss_increasing.md  goodbye.txt  hello.txt  minimal_test.py  modified_coco_build.py  mypy.ini  mypy_errors.txt  package-lock.json  package.json  pre_commit_fixes.md  pre_commit_fixes_summary.md  pre_commit_output.txt  pre_commit_output_new.txt  pyproject.toml  pytest.ini  ruff.toml  run_fiftyone.py  run_fixes.sh  run_quick_test.py  run_test_evaluation.sh  run_training_with_logging.py  setup_venv.sh  test_amp_enabled.py  (+32 more)
adapters/: __init__.py
configs/: 1  base_config.yaml  cmr_segmentation.yaml  default.yaml  fixed_size_config.yaml  fixed_test_config.yaml  iter_training_config.yaml  mask_enabled.yaml  test_config.yaml  test_iter_config.yaml  test_training.yaml
development_setup/: install_claude.sh
docs/: albumentations_integration.md  anti_patterns_refactoring.md  configuration.md  custom_annotations.md  error_handling.md  evaluation.md  fp16_training_fix.md  hasattr_replacement_implementation.md  hasattr_replacement_proposal.md  lightning_training.md  refactoring_strategy.md  summary.md
examples/: train_with_albumentations.sh  train_with_refactored_components.py
formatting_fixes/: rfdetr_deploy__onnx_optimizer.py_388_9_F841.txt  rfdetr_deploy__onnx_optimizer.py_388_9_F841_prompt.txt  rfdetr_deploy__onnx_optimizer.py_405_17_N806.txt  rfdetr_deploy__onnx_optimizer.py_405_17_N806_prompt.txt  rfdetr_deploy__onnx_optimizer.py_409_17_N806.txt  rfdetr_deploy__onnx_optimizer.py_409_17_N806_prompt.txt  rfdetr_deploy__onnx_optimizer.py_414_17_N806.txt  rfdetr_deploy__onnx_optimizer.py_414_17_N806_prompt.txt  rfdetr_deploy__onnx_optimizer.py_415_45_F821_prompt.txt  rfdetr_deploy__onnx_optimizer.py_419_17_N806.txt  rfdetr_deploy__onnx_optimizer.py_419_17_N806_prompt.txt  rfdetr_deploy__onnx_optimizer.py_422_17_N806.txt  rfdetr_deploy__onnx_optimizer.py_422_17_N806_prompt.txt  rfdetr_deploy__onnx_optimizer.py_423_44_F821.txt  rfdetr_deploy__onnx_optimizer.py_423_44_F821_prompt.txt  rfdetr_deploy__onnx_optimizer.py_426_17_N806.txt  rfdetr_deploy__onnx_optimizer.py_426_17_N806_prompt.txt  rfdetr_deploy__onnx_optimizer.py_427_17_N806.txt  rfdetr_deploy__onnx_optimizer.py_427_17_N806_prompt.txt  rfdetr_deploy__onnx_optimizer.py_428_41_F821_prompt.txt  rfdetr_deploy__onnx_optimizer.py_430_17_N806.txt  rfdetr_deploy__onnx_optimizer.py_430_17_N806_prompt.txt  rfdetr_deploy__onnx_optimizer.py_432_41_F821.txt  (+120 more)
(+170 files in other folders)
